# University-System

./: CMakeLists.txt  README.md  main.cpp
Models/: Course.cpp  Course.h  Department.cpp  Department.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h  University.cpp  University.h
